--- a/passwordGenerator/src/index.css
+++ b/passwordGenerator/src/index.css
@@ -66,3 +66,18 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.card{
+  font-size: 100%;
+  width:100%;
+  height:100%;
+  margin: auto;
+  color:orange;
+  padding-left: 100%;
+  border-radius: 10px;
+  
+}
+.me{
+  width: fit-content;
+
+}
